@@ -34,6 +34,33 @@
 			},
 			{
 			type: "item",
+			code: "expandedfoods:cookedchoppedmushroom-*-partbaked",
+			quantity: 1
+			}
+		],
+	Simmering: {
+	meltingPoint: 200,
+	meltingDuration: 110,
+	smeltedRatio: 1,
+	smeltingType: "bake",
+	smeltedStack: {
+		type: "item",
+		code: "expandedfoods:brothportion-vegetable",
+		"quantity":  50
+	},
+	requiresContainer: false
+	}
+},
+
+{
+	Ingredients: [
+			{
+			type: "item",
+			code: "waterportion",
+			quantity: 100
+			},
+			{
+			type: "item",
 			code: "expandedfoods:cookedmushroom-*-partbaked",
 			quantity: 1
 			}
@@ -78,6 +105,34 @@
     requiresContainer: false
   }
 },
+
+{
+  Ingredients: [
+    {
+      type: "item",
+      code: "waterportion",
+      quantity: 100
+    },
+    {
+      type: "item",
+      code: "expandedfoods:cookedchoppedvegetable-*-partbaked",
+      quantity: 1
+    }
+  ],
+  Simmering: {
+    meltingPoint: 200,
+    meltingDuration: 110,
+    smeltedRatio: 1,
+    smeltingType: "bake",
+    smeltedStack: {
+      type: "item",
+      code: "expandedfoods:brothportion-vegetable",
+      "quantity":  50
+    },
+    requiresContainer: false
+  }
+},
+
 {
   Ingredients: [
     {
@@ -140,6 +195,110 @@
     {
       type: "item",
       code: "game:poultry-partbaked",
+      quantity: 1
+    }
+  ],
+  Simmering: {
+    meltingPoint: 200,
+    meltingDuration: 110,
+    smeltedRatio: 1,
+    smeltingType: "bake",
+    smeltedStack: {
+      type: "item",
+      code: "expandedfoods:brothportion-meat",
+      "quantity":  50
+    },
+    requiresContainer: false
+  }
+},
+{
+  Ingredients: [
+    {
+      type: "item",
+      code: "waterportion",
+      quantity: 100
+    },
+    {
+      type: "item",
+      code: "expandedfoods:meatnugget-*-cookedpartbaked",
+      quantity: 1
+    }
+  ],
+  Simmering: {
+    meltingPoint: 200,
+    meltingDuration: 110,
+    smeltedRatio: 1,
+    smeltingType: "bake",
+    smeltedStack: {
+      type: "item",
+      code: "expandedfoods:brothportion-meat",
+      "quantity":  50
+    },
+    requiresContainer: false
+  }
+},
+{
+  Ingredients: [
+    {
+      type: "item",
+      code: "waterportion",
+      quantity: 100
+    },
+    {
+      type: "item",
+      code: "expandedfoods:meatnugget-*-tenderpartbaked",
+      quantity: 1
+    }
+  ],
+  Simmering: {
+    meltingPoint: 200,
+    meltingDuration: 110,
+    smeltedRatio: 1,
+    smeltingType: "bake",
+    smeltedStack: {
+      type: "item",
+      code: "expandedfoods:brothportion-meat",
+      "quantity":  50
+    },
+    requiresContainer: false
+  }
+},
+{
+  Ingredients: [
+    {
+      type: "item",
+      code: "waterportion",
+      quantity: 100
+    },
+    {
+      type: "item",
+      code: "expandedfoods:agedmeat-*-tenderpartbaked",
+      quantity: 1
+    }
+  ],
+  Simmering: {
+    meltingPoint: 200,
+    meltingDuration: 110,
+    smeltedRatio: 1,
+    smeltingType: "bake",
+    smeltedStack: {
+      type: "item",
+      code: "expandedfoods:brothportion-meat",
+      "quantity":  50
+    },
+    requiresContainer: false
+  }
+},
+{
+  Ingredients: [
+    {
+      type: "item",
+      code: "waterportion",
+      quantity: 100
+    },
+    {
+      type: "item",
+      code: "expandedfoods:agedmeat-*-meatballpartbaked",
       quantity: 1
     }
   ],
