@@ -10,7 +10,7 @@
 			type: "item",
 			code: "primitivesurvival:*-partbaked",
 			allowedVariants: ["fishfillet", "crabmeat"],
-			quantity: 2
+			quantity: 1
 		}
 	],
 	Simmering: {
@@ -36,7 +36,85 @@
 		{
 			type: "item",
 			code: "primitivesurvival:snakemeat-partbaked",
-			quantity: 2
+			quantity: 1
+		}
+	],
+	Simmering: {
+		meltingPoint: 200,
+		meltingDuration: 110,
+		smeltedRatio: 1,
+		smeltingType: "bake",
+		smeltedStack: {
+			type: "item",
+			code: "expandedfoods:brothportion-meat",
+			"quantity":  50
+		},
+		requiresContainer: false
+	}
+},
+{
+	Ingredients: [
+		{
+			type: "item",
+			code: "waterportion",
+			quantity: 100
+		},
+		{
+			type: "item",
+			code: "expandedfoods:crabnugget-partbaked",
+			quantity: 1
+		}
+	],
+	Simmering: {
+		meltingPoint: 200,
+		meltingDuration: 110,
+		smeltedRatio: 1,
+		smeltingType: "bake",
+		smeltedStack: {
+			type: "item",
+			code: "expandedfoods:brothportion-fish",
+			"quantity":  50
+		},
+		requiresContainer: false
+	}
+},
+{
+	Ingredients: [
+		{
+			type: "item",
+			code: "waterportion",
+			quantity: 100
+		},
+		{
+			type: "item",
+			code: "expandedfoods:fishnugget-partbaked",
+			quantity: 1
+		}
+	],
+	Simmering: {
+		meltingPoint: 200,
+		meltingDuration: 110,
+		smeltedRatio: 1,
+		smeltingType: "bake",
+		smeltedStack: {
+			type: "item",
+			code: "expandedfoods:brothportion-fish",
+			"quantity":  50
+		},
+		requiresContainer: false
+	}
+},
+{
+	Ingredients: [
+		{
+			type: "item",
+			code: "waterportion",
+			quantity: 100
+		},
+		{
+			type: "item",
+			code: "expandedfoods:snakenugget-partbaked",
+			quantity: 1
 		}
 	],
 	Simmering: {
