@@ -42,11 +42,13 @@ Wildcraft compatibility updated - DONE!!!
 Salt works in meals again - DONE!!!
 Non-chopped meat works in porridge - DONE!!!
 New gelatin textures - DONE!!!
-Chopped food can be used for broth
+Chopped food can be used for broth - DONE!!!
+Aged meat can be used for broth
 Lard harden time reduced to 1/4th previous values; corrected harden transition numbers - DONE!!!
 Soulstorm Brew buffed from +10 HP per liter to +100 HP per liter :^) - DONE!!!
 Wildcraft nutrition in pemmican corrected - DONE!!!
 Fish nugget soup text fixed - DONE!!!
+PS broth recipes require 1 item instead of 2 - DONE!!!
 
 CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 
